--- a/src/gettingstarted.tex
+++ b/src/gettingstarted.tex
@@ -6,6 +6,8 @@ This first chapter of the book will get us going with Rust and its tooling. Firs
 The first step to using Rust is to install it. Generally speaking, you’ll need an Internet connection to run the commands in 
 this section, as we’ll be downloading Rust from the internet.
 
+\blank
+
 We’ll be showing off a number of commands using a terminal, and those lines all start with \code{\$}. We don't need to type in the 
 \code{\$}s, they are there to indicate the start of each command. We’ll see many tutorials and examples around the web that follow 
 this convention: \code{\$} for commands run as our regular user, and \code{\#} for commands we should be running as an administrator.
@@ -15,10 +17,12 @@ this convention: \code{\$} for commands run as our regular user, and \code{\#} f
 The Rust compiler runs on, and compiles to, a great number of platforms, though not all platforms are equally supported. 
 Rust's support levels are organized into three tiers, each with a different set of guarantees.
 
+\blank
+
 Platforms are identified by their \enquote{target triple} which is the string to inform the compiler what kind of output should 
 be produced. The columns below indicate whether the corresponding component works on the specified platform.
 
-\paragraph*{Tier 1}
+\myparagraph{Tier 1}
 
 Tier 1 platforms can be thought of as \enquote{guaranteed to build and work}. Specifically they will each satisfy the 
 following requirements:
@@ -48,7 +52,7 @@ following requirements:
         \end{tabular}
 \end{table}
 
-\paragraph*{Tier 2}
+\myparagraph{Tier 2}
 
 Tier 2 platforms can be thought of as \enquote{guaranteed to build}. Automated tests are not run so it's not guaranteed to produce a 
 working build, but platforms often work to quite a good degree and patches are always welcome! Specifically, these platforms are 
@@ -80,7 +84,7 @@ required to have each of the following:
     \end{tabular}
 \end{table}
 
-\paragraph*{Tier 3}
+\myparagraph{Tier 3}
 
 Tier 3 platforms are those which Rust has support for, but landing changes is not gated on the platform either building or 
 passing tests. Working builds for these platforms may be spotty as their reliability is often defined in terms of 
@@ -114,17 +118,20 @@ infrastructure producing these in unofficial locations.
         \hline
     \end{tabular}
 \end{table}
+
 Note that this table can be expanded over time, this isn't the exhaustive set of tier 3 platforms that will ever be!
 
 \subsubsection*{Installing on Linux or Mac}
 
 If we're on Linux or a Mac, all we need to do is open a terminal and type this:
-\begin{lstlisting}[language=Bash]
+
+\begin{verbatim}
 $ curl -sSf https://static.rust-lang.org/rustup.sh | sh
-\end{lstlisting}
+\end{verbatim}
 
 This will download a script, and stat the installation. If it all goes well, you'll see this appear:
-\begin{lstlisting}[language=Bash]
+
+\begin{verbatim}
 Welcome to Rust.
 
 This script will download the Rust compiler and its package manager, 
@@ -139,7 +146,8 @@ You may uninstall later by running /usr/local/lib/rustlib/uninstall.sh,
 or by running this script again with the --uninstall flag.
 
 Continue? (y/N)
-\end{lstlisting}
+\end{verbatim}
+
 From here, press \code{y} for ‘yes’, and then follow the rest of the prompts.
 
 \subsubsection*{Installing on Windows}
@@ -150,26 +158,33 @@ If you're on Windows, please download the appropriate \href{https://www.rust-lan
 
 Uninstalling Rust is as easy as installing it. On Linux or Mac, run the uninstall script:
 
-\begin{lstlisting}[language=Bash]
+\begin{verbatim}
 $ sudo /usr/local/lib/rustlib/uninstall.sh
-\end{lstlisting}
+\end{verbatim}
 
 If we used the Windows installer, we can re-run the \code{.msi} and it will give us an uninstall option.
 
 \subsubsection*{Troubleshooting}
 
 If we've got Rust installed, we can open up a shell, and type this:
-\begin{lstlisting}[language=Bash]
+
+\begin{verbatim}
 $ rustc --version
-\end{lstlisting}
+\end{verbatim}
 
 You should see the version number, commit hash, and commit date.
+
 \blank
+
 If you do, Rust has been installed successfully! Congrats!
+
 \blank
+
 If you don't and you're on Windows, check that Rust is in your \%PATH\% system variable. If it isn't, run the installer again, 
 select \enquote{Change} on the \enquote{Change, repair, or remove installation} page and ensure \enquote{Add to PATH} is installed 
 on the local hard drive.
+
+\blank
 
 If not, there are a number of places where we can get help. The easiest is the 
 \href{irc://irc.mozilla.org/\#rust}{\#rust IRC channel on irc.mozilla.org}, which we can access through
@@ -177,24 +192,29 @@ If not, there are a number of places where we can get help. The easiest is the
 Rustaceans (a silly nickname we call ourselves) who can help us out. Other great resources include 
 \href{https://users.rust-lang.org/}{the user’s forum}, and \href{http://stackoverflow.com/questions/tagged/rust}{Stack Overflow}.
 
+\blank
+
 This installer also installs a copy of the documentation locally, so we can read it offline. On UNIX systems, \code{/usr/local/share/doc/rust} 
 is the location. On Windows, it's in a \code{share/doc directory}, inside the directory to which Rust was installed.
 
 \subsection{Hello, World!}
 
-Now that you have Rust installed, we'll help you write your first Rust program. It's traditional when learning a new language to write 
-a little program to print the text \enquote{Hello, world!} to the screen, and in this section, we'll follow that tradition.
+Now that you have Rust installed, we'll help you write your first Rust program. It's traditional when learning a new language 
+to write a little program to print the text \enquote{Hello, world!} to the screen, and in this section, we'll follow that 
+tradition.
 
 \blank
-The nice thing about starting with such a simple program is that you can quickly verify that your compiler is installed, and that it's 
-working properly. Printing information to the screen is also a pretty common thing to do, so practicing it early on is good.
+
+The nice thing about starting with such a simple program is that you can quickly verify that your compiler is installed, 
+and that it's working properly. Printing information to the screen is also a pretty common thing to do, so practicing it 
+early on is good.
 
 \begin{myquote}
-    Note: This book assumes basic familiarity with the command line. Rust itself makes no specific demands about your editing, tooling, 
-    or where your code lives, so if you prefer an IDE to the command line, that's an option. You may want to check out SolidOak, which 
-    was built specifically with Rust in mind. There are a number of extensions in development by the community, and the Rust team ships 
-    plugins for various editors. Configuring your editor or IDE is out of the scope of this tutorial, so check the documentation for 
-    your specific setup.
+    Note: This book assumes basic familiarity with the command line. Rust itself makes no specific demands about your editing,
+    tooling, or where your code lives, so if you prefer an IDE to the command line, that's an option. You may want to check out
+    SolidOak, which was built specifically with Rust in mind. There are a number of extensions in development by the community, 
+    and the Rust team ships plugins for various editors. Configuring your editor or IDE is out of the scope of this tutorial, so
+    check the documentation for your specific setup.
 \end{myquote}
 
 \subsubsection*{Creating a Project File}
@@ -202,12 +222,13 @@ working properly. Printing information to the screen is also a pretty common thi
 First, make a file to put your Rust code in. Rust doesn't care where your code lives, but for this book, I suggest making a 
 \emph{projects} directory in your home directory, and keeping all your projects there. Open a terminal and enter the following 
 commands to make a directory for this particular project:
-\begin{lstlisting}[language=Bash]
+
+\begin{verbatim}
 $ mkdir ~/projects
 $ cd ~/projects
 $ mkdir hello_world
 $ cd hello_world
-\end{lstlisting}
+\end{verbatim}
 
 \begin{myquote}
 Note: If you’re on Windows and not using PowerShell, the ~ may not work. Consult the documentation for your shell for more details.
@@ -220,6 +241,7 @@ than one word in your filename, use an underscore to separate them; for example,
 \emph{helloworld.rs}.
 
 \blank
+
 Now open the main.rs file you just created, and type the following code:
 
 \begin{lstlisting}[language=Rust]
@@ -230,13 +252,365 @@ fn main() {
 
 Save the file, and go back to your terminal window. On Linux or OSX, enter the following commands:
 
-\begin{lstlisting}[language=Bash]
+\begin{verbatim}
 $ rustc main.rs
 $ ./main
 Hello, world!
-\end{lstlisting}
+\end{verbatim}
 
 In Windows, replace \code{main} with \code{main.exe}. Regardless of your operating system, you should see the string 
 \code{Hello, world!} print to the terminal. If you did, then congratulations! You've officially written a Rust program. 
 That makes you a Rust programmer! Welcome.
 
+\subsubsection*{Anatomy of a Rust Program}
+
+Now, let’s go over what just happened in your \enquote{Hello, world!} program in detail. Here's the first piece of the puzzle:
+
+\begin{lstlisting}[language=Rust]
+fn main() {
+    
+}
+\end{lstlisting}
+
+These lines define a \emph{function} in Rust. The \code{main} function is special: it's the beginning of every Rust program. The 
+first line says, \enquote{I’m declaring a function named \code{main} that takes no arguments and returns nothing.} If there were 
+arguments, they would go inside the parentheses (\code{(} and \code{)}), and because we aren’t returning anything from this function, 
+we can omit the return type entirely.
+
+\blank
+
+Also note that the function body is wrapped in curly braces (\code{\{} and \code{\}}). Rust requires these around all function
+bodies. It's considered good style to put the opening curly brace on the same line as the function declaration, with one space 
+in between.
+
+\blank
+
+Inside the \code{main()} function:
+
+\begin{lstlisting}[language=Rust]
+println!("Hello, world!");
+\end{lstlisting}
+
+This line does all of the work in this little program: it prints text to the screen. There are a number of details that are important 
+here. The first is that it’s indented with four spaces, not tabs.
+
+\blank
+
+% TODO make macro a hyperref to the macro section
+The second important part is the \code{println!()} line. This is calling a Rust \emph{macro}, which is how metaprogramming is done 
+in Rust. If it were calling a function instead, it would look like this: \code{println()} (without the !). We'll discuss Rust macros 
+in more detail later, but for now you only need to know that when you see a \code{!} that means that you’re calling a macro 
+instead of a normal function.
+
+\blank
+
+% TODO make statically allocated string a hyperref to the section about the stack and heap
+Next is \code{"Hello, world!"} which is a \emph{string}. Strings are a surprisingly complicated topic in a systems programming 
+language, and this is a statically allocated string. We pass this string as an argument to \code{println!}, which prints the 
+string to the screen. Easy enough!
+
+\blank
+
+The line ends with a semicolon (\code{;}). Rust is an \nameref{sec:gloss_expressionorientedlang}, which means that most things are 
+expressions, rather than statements. The \code{;} indicates that this expression is over, and the next one is ready 
+to begin. Most lines of Rust code end with a \code{;}.
+
+\subsubsection*{Compiling and Running are Separate Steps}
+
+In \enquote{Writing and Running a Rust Program}, we showed you how to run a newly created program. We'll break that process 
+down and examine each step now.
+
+\blank
+
+Before running a Rust program, you have to compile it. You can use the Rust compiler by entering the 
+\code{rustc} command and passing it the name of your source file, like this:
+
+\begin{verbatim}
+$ rustc main.rs
+\end{verbatim}
+
+If you come from a C or C++ background, you'll notice that this is similar to \code{gcc} or \code{clang}. After 
+compiling successfully, Rust should output a binary executable, which you can see on Linux or OSX by entering the 
+\code{ls} command in your shell as follows:
+
+\begin{verbatim}
+$ ls
+main main.rs 
+\end{verbatim}
+
+On Windows, you'd enter:
+
+\begin{verbatim}
+$ dir
+main.exe main.rs  
+\end{verbatim}
+
+This shows we have two files: the source code, with an \code{.rs} extension, and the executable (\code{main.exe} on Windows, 
+\code{main} everywhere else). All that's left to do from here is run the \code{main} or \code{main.exe} file, like this:
+
+\begin{verbatim}
+$./main  # or main.exe on Windows  
+\end{verbatim}
+
+If \emph{main.rs} were your \enquote{Hello, world!} program, this would print \code{Hello, world!} to your terminal.
+
+\blank
+
+If you come from a dynamic language like Ruby, Python, or JavaScript, you may not be used to compiling and running a program 
+being separate steps. Rust is an \emph{ahead-of-time compiled} language, which means that you can compile a program, give it 
+to someone else, and they can run it even without Rust installed. If you give someone a \code{.rb} or \code{.py} or \code{.js} 
+file, on the other hand, they need to have a Ruby, Python, or JavaScript implementation installed (respectively), but you only 
+need one command to both compile and run your program. Everything is a tradeoff in language design.
+
+\blank
+
+Just compiling with \code{rustc} is fine for simple programs, but as your project grows, you'll want to be able to manage all 
+of the options your project has, and make it easy to share your code with other people and projects. Next, I'll introduce you 
+to a tool called Cargo, which will help you write real-world Rust programs.
+
+\subsection{Hello, Cargo!}
+
+Cargo is Rust’s build system and package manager, and Rustaceans use Cargo to manage their Rust projects. Cargo manages 
+three things: building your code, downloading the libraries your code depends on, and building those libraries. We call 
+libraries your code needs ‘dependencies’ since your code depends on them.
+
+\blank
+
+The simplest Rust programs don’t have any dependencies, so right now, you'd only use the first part of its functionality. 
+As you write more complex Rust programs, you’ll want to add dependencies, and if you start off using Cargo, that will be 
+a lot easier to do.
+
+\blank
+
+As the vast, vast majority of Rust projects use Cargo, we will assume that you’re using it for the rest of the book. 
+Cargo comes installed with Rust itself, if you used the official installers. If you installed Rust through some other 
+means, you can check if you have Cargo installed by typing:
+
+\begin{verbatim}
+$ cargo --version
+\end{verbatim}
+
+into a terminal. If you see a version number, great! If you see an error like ‘\code{command not found}’, then you should look 
+at the documentation for the system in which you installed Rust, to determine if Cargo is separate.
+
+\subsubsection*{Converting to Cargo}
+
+Let’s convert the Hello World program to Cargo. To Cargo-fy a project, you need to do three things:
+
+\begin{enumerate}
+    \item{Put your source file in the right directory.}
+    \item{Get rid of the old executable (\code{main.exe} on Windows, \code{main} everywhere else) and make a new one.}
+    \item{Make a Cargo configuration file.}
+\end{enumerate}
+
+Let's get started!
+
+\myparagraph{Creating a new Executable and Source Directory}
+
+First, go back to your terminal, move to your \emph{hello\_world} directory, and enter the following commands:
+
+\begin{verbatim}
+$ mkdir src
+$ mv main.rs src/main.rs
+$ rm main  # or 'del main.exe' on Windows 
+\end{verbatim}
+
+Cargo expects your source files to live inside a \emph{src} directory, so do that first. This leaves the top-level 
+project directory (in this case, \emph{hello\_world}) for READMEs, license information, and anything else not related 
+to your code. In this way, using Cargo helps you keep your projects nice and tidy. There's a place for everything, 
+and everything is in its place.
+
+\blank
+
+Now, copy \emph{main.rs} to the \emph{src} directory, and delete the compiled file you created with \code{rustc}. As usual, 
+replace \code{main} with \code{main.exe} if you're on Windows.
+
+\blank
+
+This example retains \code{main.rs} as the source filename because it's creating an executable. If you wanted to make a 
+library instead, you'd name the file \code{lib.rs}. This convention is used by Cargo to successfully compile your projects, 
+but it can be overridden if you wish.
+
+\myparagraph{Creating a Configuration File}
+
+Next, create a new file inside your \emph{hello\_world} directory, and call it \code{Cargo.toml}.
+
+\blank
+
+Make sure to capitalize the \code{C} in \emph{Cargo.toml}, or Cargo won't know what to do with the configuration file.
+
+\blank
+
+This file is in the \href{https://github.com/toml-lang/toml}{TOML} (Tom's Obvious, Minimal Language) format. TOML is similar 
+to INI, but has some extra goodies, and is used as Cargo’s configuration format.
+
+\blank
+
+Inside this file, type the following information:
+
+\begin{verbatim}
+[package]
+
+name = "hello_world"
+version = "0.0.1"
+authors = [ "Your name <you@example.com>" ] 
+\end{verbatim}
+
+The first line, \code{[package]}, indicates that the following statements are configuring a package. As we add more information 
+to this file, we’ll add other sections, but for now, we only have the package configuration.
+
+\blank
+
+The other three lines set the three bits of configuration that Cargo needs to know to compile your program: its name, what 
+version it is, and who wrote it.
+
+\blank
+
+Once you've added this information to the \emph{Cargo.toml} file, save it to finish creating the configuration file.
+
+\subsection*{Building and Running a Cargo Project}
+
+With your \emph{Cargo.toml} file in place in your project's root directory, you should be ready to build and run your 
+Hello World program! To do so, enter the following commands:
+
+\begin{verbatim}
+$ cargo build
+   Compiling hello_world v0.0.1 (file:///home/yourname/projects/hello_world)
+$ ./target/debug/hello_world
+Hello, world! 
+\end{verbatim}
+
+Bam! If all goes well, \code{Hello, world!} should print to the terminal once more.
+
+\blank
+
+You just built a project with \code{cargo build} and ran it with \code{./target/debug/hello\_world}, but you can actually do 
+both in one step with \code{cargo} run as follows:
+
+\begin{verbatim}
+$ cargo run
+     Running `target/debug/hello_world`
+Hello, world!  
+\end{verbatim}
+
+Notice that this example didn’t re-build the project. Cargo figured out that the file hasn’t changed, and so it just 
+ran the binary. If you'd modified your source code, Cargo would have rebuilt the project before running it, and you 
+would have seen something like this:
+
+\begin{verbatim}
+$ cargo run
+   Compiling hello_world v0.0.1 (file:///home/yourname/projects/hello_world)
+     Running `target/debug/hello_world`
+Hello, world!  
+\end{verbatim}
+
+Cargo checks to see if any of your project’s files have been modified, and only rebuilds your project if they’ve changed since 
+the last time you built it.
+
+\blank
+
+With simple projects, Cargo doesn't bring a whole lot over just using \code{rustc}, but it will become useful in future. This 
+is especially true when you start using crates; these are synonymous with a ‘library’ or ‘package’ in other programming languages. 
+For complex projects composed of multiple crates, it’s much easier to let Cargo coordinate the build. Using Cargo, you can run 
+\code{cargo build}, and it should work the right way.
+
+\myparagraph{Building for Release}
+
+When your project is finally ready for release, you can use \code{cargo build --release} to compile your project with optimizations. 
+These optimizations make your Rust code run faster, but turning them on makes your program take longer to compile. This is why 
+there are two different profiles, one for development, and one for building the final program you’ll give to a user.
+
+\blank
+
+Running this command also causes Cargo to create a new file called \emph{Cargo.lock}, which looks like this:
+
+\begin{verbatim}
+[root]
+name = "hello_world"
+version = "0.0.1"
+\end{verbatim}
+
+Cargo uses the \emph{Cargo.lock} file to keep track of dependencies in your application. This is the Hello World project's 
+\emph{Cargo.lock} file. This project doesn't have dependencies, so the file is a bit sparse. Realistically, you won't ever 
+need to touch this file yourself; just let Cargo handle it.
+
+\blank
+
+That’s it! If you've been following along, you should have successfully built \code{hello\_world} with Cargo.
+
+\blank
+
+Even though the project is simple, it now uses much of the real tooling you’ll use for the rest of your Rust career. 
+In fact, you can expect to start virtually all Rust projects with some variation on the following commands:
+
+\begin{verbatim}
+$ git clone someurl.com/foo
+$ cd foo
+$ cargo build 
+\end{verbatim}
+
+\myparagraph{Making a new Cargo Project the Easy Way}
+
+You don’t have to go through that previous process every time you want to start a new project! Cargo can quickly make a 
+bare-bones project directory that you can start developing in right away.
+
+\blank
+
+To start a new project with Cargo, enter \code{cargo new} at the command line:
+
+\begin{verbatim}
+$ cargo new hello_world --bin
+\end{verbatim}
+
+This command passes \code{--bin} because the goal is to get straight to making an executable application, as opposed to a 
+library. Executables are often called binaries (as in \code{/usr/bin}, if you’re on a Unix system).
+
+\blank
+
+Cargo has generated two files and one directory for us: a \code{Cargo.toml} and a \emph{src} directory with a \emph{main.rs}
+file inside. These should look familliar, they’re exactly what we created by hand, above.
+
+\blank
+
+This output is all you need to get started. First, open \code{Cargo.toml}. It should look something like this:
+
+\begin{verbatim}
+[package]
+
+name = "hello_world"
+version = "0.1.0"
+authors = ["Your Name <you@example.com>"]  
+\end{verbatim}
+
+Cargo has populated \emph{Cargo.toml} with reasonable defaults based on the arguments you gave it and your \code{git}
+global configuration. You may notice that Cargo has also initialized the \code{hello\_world} directory as a \code{git} 
+repository.
+
+\blank
+
+Here’s what should be in \code{src/main.rs}:
+
+\begin{lstlisting}[language=Rust]
+fn main() {
+    println!("Hello, world!");
+}
+\end{lstlisting}
+
+Cargo has generated a \enquote{Hello World!} for you, and you’re ready to start coding!
+
+\begin{myquote}
+Note: If you want to look at Cargo in more detail, check out the official \href{http://doc.crates.io/guide.html}{Cargo guide}, 
+which covers all of its features.
+\end{myquote}
+
+\subsection{Closing Thoughts}
+
+This chapter covered the basics that will serve you well through the rest of this book, and the rest of your time with Rust. 
+Now that you’ve got the tools down, we'll cover more about the Rust language itself.
+
+\blank
+
+% TODO make syntax and semantics a hyperref
+You have two options: Dive into a project with ‘Learn Rust’, or start from the bottom and work your way up with 
+‘Syntax and Semantics’. More experienced systems programmers will probably prefer ‘Learn Rust’, while those from 
+dynamic backgrounds may enjoy either. Different people learn differently! Choose whatever’s right for you.
