Makefile now uses latexmk. Added a few new chapters.

--- a/src/title.tex
+++ b/src/title.tex
@@ -12,7 +12,8 @@
 \vspace{3cm}
 
 {\large
-\textsc{Darth-Revan}\\[0.3cm]
+\textsc{Darth-Revan}\\[0.15cm]
+Originally created and published by {Mozilla Foundation}\\[0.3cm]
 \url{https://github.com/Darth-Revan/rust-lang_Doc-LaTeX}
 }
 \vfill
